--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
 
     <link rel="stylesheet" href="styles.css" />
@@ -21,7 +21,7 @@
     <main>
       <div class="container">
         <div class="image_Container">
-          <img src="./assets/images/image-omelette.jpeg" alt="omelette" />
+          <img src="image-omelette.jpeg" alt="omelette" />
         </div>
 
         <div class="content">
